--- a/languages/adnet-print.pot
+++ b/languages/adnet-print.pot
@@ -1,9 +1,8 @@
-# Copyright (C) 2020 Automattic
-# This file is distributed under the GNU General Public License v2 or later.
+# Copyright (C) 2023 Abhishek Kumar Pathak
+# Copyright Abhishek Kumar Pathak, All rights reserved.
 msgid ""
 msgstr ""
-"Project-Id-Version: _s 1.0.0\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/theme/_s\n"
+"Project-Id-Version: adnet-print 2.0.0\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -12,26 +11,26 @@ msgstr ""
 "POT-Creation-Date: 2020-04-17T21:03:15+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.4.0\n"
-"X-Domain: _s\n"
+"X-Domain: adnet-print\n"
 
 #. Theme Name of the theme
-msgid "_s"
+msgid "Adnet Print"
 msgstr ""
 
 #. Theme URI of the theme
-msgid "https://underscores.me/"
+msgid ""
 msgstr ""
 
 #. Description of the theme
-msgid "Hi. I'm a starter theme called <code>_s</code>, or <em>underscores</em>, if you like. I'm a theme meant for hacking so don't use me as a <em>Parent Theme</em>. Instead try turning me into the next, most awesome, WordPress theme out there. That's what I'm here for."
+msgid "A WP theme for Adnet Print Company"
 msgstr ""
 
 #. Author of the theme
-msgid "Automattic"
+msgid "Abhishek Kumar Pathak"
 msgstr ""
 
 #. Author URI of the theme
-msgid "https://automattic.com/"
+msgid "mailto://officialabhishekpathak@gmail.com"
 msgstr ""
 
 #: 404.php:18
